--- a/app/theme/css/theme.style.css
+++ b/app/theme/css/theme.style.css
@@ -1,3 +1,9 @@
+@media(max-width: 992px){
+	.c4-nav-items{
+		overflow: auto;
+		overflow-x: hidden;
+	}
+}
 @media (max-width: 992px){
 	.c4-container i{
 		display: block;
